compiler/flux_hir/src/tests/snapshots/flux_hir__tests__resolution__use_private_struct.snap
---
source: compiler/flux_hir/src/tests/resolution.rs
expression: s
---
//  ./main.flx

use foo::Foo;
mod foo;
//  ./foo.flx

struct Foo {
}


Diagnostics

[E0014] Error: cannot access private path segment
   ,-[ ./main.flx:3:3]
   |
 3 | use foo::Foo;
   |   ^^^^|^|^  
   |       `----- cannot access private path segment in path `foo::Foo`
   |         |   
   |         `--- private segment `Foo`
---'

